Fix searches overflow

--- a/src/modules/Searches/Searches.sass
+++ b/src/modules/Searches/Searches.sass
@@ -1,5 +1,6 @@
 .searches
   background: gray
+  overflow: auto
   &__header
     display: flex
     flex-flow: row wrap
